# kvasir_hw_interface

./: CMakeLists.txt  README.md  kvasir_hw_interface.xml  loki_hw_interface.xml  package.xml  rename_package.py
hardware/: kvasir_system.cpp  local_nucleo_interface.cpp  loki_system.cpp
hardware/include/kvasir_hw_interface/: kvasir_system.hpp  local_nucleo_interface.hpp  visibility_control.h
hardware/include/loki_hw_interface/: arduino_comms.hpp  local_nucleo_interface.hpp  loki_system.hpp  visibility_control.h  wheel.hpp
