<?xml version="1.0"?>
<package format="3">
  <name>kvasir_hw_interface</name>
  <version>1.0.0</version>
  <description>
    Hardware interface package for the Kvasir robot using `ros2_control`. This package provides a hardware interface for controlling the Kvasir robot's wheels and actuators via a serial connection.
  </description>

  <maintainer email="PurpleMyst@users.noreply.github.com">PurpleMyst</maintainer>

  <maintainer email="PurpleMyst@users.noreply.github.com">PurpleMyst</maintainer>
  <author email="denis.stogl@stoglrobotics.de">Dr.-Ing. Denis Stogl</author>
  <author email="bence.magyar.robotics@gmail.com">Bence Magyar</author>
  <author email="christoph.froehlich@ait.ac.at">Christoph Froehlich</author>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>libserial-dev</depend>

  <exec_depend>ros2_controllers_test_nodes</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>ros2controlcli</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

